--- a/brightcove_dynamic_ingest.routing.yml
+++ b/brightcove_dynamic_ingest.routing.yml
@@ -1,15 +1,15 @@
 brightcove_dynamic_ingest.add_form:
-  path: '/brightcove_dynamic_ingest/add'
+  path: '/brightcove-dynamic-ingest/add'
   defaults:
     _form: '\Drupal\brightcove_dynamic_ingest\Form\BcDynamicIngestForm'
-    _title: 'MGC Form'
+    _title: 'Brightcove Dynamic Ingest'
   requirements:
     _permission: 'brightcove dynamic ingest'
   options:
     _admin_route: TRUE
     no_cache: 'TRUE'
 brightcove_dynamic_ingest.get_token:
-  path: '/brightcove_dynamic_ingest/get-token'
+  path: '/brightcove-dynamic-ingest/get-token'
   defaults:
     _controller: '\Drupal\brightcove_dynamic_ingest\Controller\BcDynamicIngestController::getOauthToken'
     _title: 'Brightcove OAuth Token'
@@ -18,7 +18,7 @@ brightcove_dynamic_ingest.get_token:
   options:
     no_cache: 'TRUE'
 brightcove_dynamic_ingest.finalize_upload:
-  path: '/brightcove_dynamic_ingest/finalize-upload'
+  path: '/brightcove-dynamic-ingest/finalize-upload'
   defaults:
     _controller: '\Drupal\brightcove_dynamic_ingest\Controller\BcDynamicIngestController::finalizeUpload'
     _title: 'Brightcove Upload Finalize'
@@ -27,7 +27,7 @@ brightcove_dynamic_ingest.finalize_upload:
   options:
     no_cache: 'TRUE'
 brightcove_dynamic_ingest.get_thumbnail:
-  path: '/brightcove_dynamic_ingest/get-thumbnail'
+  path: '/brightcove-dynamic-ingest/get-thumbnail'
   defaults:
     _controller: '\Drupal\brightcove_dynamic_ingest\Controller\BcDynamicIngestController::getThumbnail'
     _title: 'Get uploaded thumbnail'
