--- a/brightcove_dynamic_ingest.links.task.yml
+++ b/brightcove_dynamic_ingest.links.task.yml
@@ -1,4 +1,4 @@
 brightcove_dynamic_ingest.add_form:
-  title: 'MGC Form'
+  title: 'Brightcove Dynamic Ingest'
   route_name: brightcove_dynamic_ingest.add_form
   base_route: system.admin_content
