--- a/brightcove_dynamic_ingest.links.task.yml
+++ b/brightcove_dynamic_ingest.links.task.yml
@@ -1,3 +1,7 @@
+brightcove_dynamic_ingest.config_form:
+  title: 'Brightcove Dynamic Ingest Config'
+  route_name: brightcove_dynamic_ingest.config_form
+  base_route: system.admin_config_media
 brightcove_dynamic_ingest.add_form:
   title: 'Brightcove Dynamic Ingest'
   route_name: brightcove_dynamic_ingest.add_form
