--- a/brightcove_dynamic_ingest.info.yml
+++ b/brightcove_dynamic_ingest.info.yml
@@ -2,6 +2,7 @@ name: 'Brightcove Dynamic Ingest'
 type: module
 description: 'Brightcove Dynamic Ingest module provides a form to upload video directly to Brightcove bucket instead of Drupal file system.'
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Brightcove'
 dependencies:
   - brightcove:brightcove
