--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,16 @@
 {
-    "name": "drupal/brightcove_dynamic_ingest",
+    "name": "brightcove_dynamic_ingest",
     "description": "Brightcove Dynamic Ingest module provides a form to upload video directly to Brightcove bucket instead of Drupal file system.",
     "type": "drupal-module",
     "keywords": [
         "Drupal",
         "Brightcove Dynamic Ingest"
     ],
+    "autoload": {
+        "psr-4": {
+            "Drupal\\BrightcoveDynamicIngest\\": "src/"
+        }
+    },
     "license": "GPL-2.0+",
-    "minimum-stability": "dev",
-    "require": {
-        "drupal/brightcove": "^3.0"
-    }
+    "minimum-stability": "dev"
 }
