--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,6 @@
 {
-    "name": "brightcove_dynamic_ingest",
-    "description": "Brightcove Dynamic Ingest module provides a form to upload video directly to Brightcove bucket instead of Drupal file system.",
+    "name": "brightcove/brightcove_dynamic_ingest",
     "type": "drupal-module",
-    "keywords": [
-        "Drupal",
-        "Brightcove Dynamic Ingest"
-    ],
-    "autoload": {
-        "psr-4": {
-            "Drupal\\BrightcoveDynamicIngest\\": "src/"
-        }
-    },
-    "license": "GPL-2.0+",
-    "minimum-stability": "dev"
+    "description": "Drupal 9 module",
+    "license": "GPL-2.0+"
 }
